force-app/main/default/objects/Refund_Request__c/Refund_Request__c.object-meta.xml
<CustomObject>
    <description>Refund and credit request approval tracking.</description>
    <label>Refund Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Refund Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>