force-app/main/default/objects/Refund_Request__c/fields/Amount__c.field-meta.xml
<CustomField>
<fullName>Amount__c</fullName>
<label>Amount</label>
<type>Currency</type>
<required>true</required>
</CustomField>