force-app/main/default/objects/Refund_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Refund fields</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Refund fields Records</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>