force-app/main/default/objects/Refund_Request__c/fields/Device_Returned__c.field-meta.xml
<CustomField>
    <fullName>Device_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund fields</label>
    <type>Checkbox</type>
</CustomField>