force-app/main/default/objects/Refund_Request__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Refund fields</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Refund fields Records</relationshipLabel>
    <relationshipName>RefundRequestEnrollment</relationshipName>
    <type>Lookup</type>
</CustomField>