force-app/main/default/objects/Refund_Request__c/fields/Patient__c.field-meta.xml
<CustomField>
<fullName>Patient__c</fullName>
<label>Patient</label>
<type>Lookup</type>
<required>true</required>
<referenceTo>Account</referenceTo>
<deleteConstraint>Restrict</deleteConstraint>
<relationshipName>RefundRequestPatient</relationshipName>
</CustomField>