force-app/main/default/objects/Refund_Request__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Refund fields</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Refund fields Records</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>