force-app/main/default/objects/Refund_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
<fullName>Reason__c</fullName>
<label>Reason</label>
<type>Text</type>
<length>255</length>
</CustomField>