force-app/main/default/objects/Refund_Request__c/fields/Retention_Offer__c.field-meta.xml
<CustomField>
    <fullName>Retention_Offer__c</fullName>
    <label>Refund fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>