force-app/main/default/objects/Refund_Request__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<type>Picklist</type>
<required>true</required>
</CustomField>